--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,20 @@ a {
 ul {
   list-style-type: none;
 }
+/* my solution */
+.header{
+  display: flex;
+  padding: 8px;
+  justify-content: space-between;
+}
+.leftside,.rightside{
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+ul{
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+}
